--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
   "dependencies": {
+    "abcjs": "^5.12.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
