--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "node": "15.5.0"
   },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "yarn run generate-icons && vue-cli-service serve",
+    "build": "yarn run generate-icons && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
