--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^5.3.0",
     "abcjs": "^5.12.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
@@ -24,9 +25,9 @@
     "@vue/cli-service": "~4.5.13",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^7.18.0",
+    "eslint": "^7.31.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^7.4.0",
+    "eslint-plugin-vue": "^7.14.0",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "sass": "^1.25.0",
