--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "transpose",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "15.5.0"
-  },
   "scripts": {
     "serve": "yarn run generate-icons && vue-cli-service serve",
     "build": "yarn run generate-icons && vue-cli-service build",
@@ -12,6 +9,7 @@
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^5.3.0",
     "abcjs": "^5.12.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
@@ -20,21 +18,24 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.9",
-    "@vue/cli-plugin-eslint": "~4.5.9",
-    "@vue/cli-plugin-router": "~4.5.9",
-    "@vue/cli-plugin-vuex": "~4.5.9",
-    "@vue/cli-service": "~4.5.9",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^7.18.0",
+    "eslint": "^7.31.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^7.4.0",
-    "lint-staged": "^10.2.11",
+    "eslint-plugin-vue": "^7.14.0",
+    "lint-staged": "^11.1.1",
     "prettier": "^2.0.5",
     "sass": "^1.25.0",
     "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "engines": {
+    "node": "15.5.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
