--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,23 +1,16 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-standard-scss"
+    "stylelint-config-standard-scss",
+    "stylelint-config-recommended-vue"
   ],
-  "plugins": [
-    "stylelint-order"
-  ],
+  "plugins": ["stylelint-scss", "stylelint-order"],
   "rules": {
     "at-rule-no-unknown": null,
     "function-no-unknown": null,
     "no-invalid-position-at-import-rule": null,
-    "order/order": [
-      "custom-properties",
-      "declarations",
-      "rules"
-    ],
-    "order/properties-alphabetical-order": [
-      true
-    ],
+    "order/order": ["custom-properties", "declarations", "rules"],
+    "order/properties-alphabetical-order": [true],
     "scss/at-rule-no-unknown": true,
     "selector-id-pattern": null,
     "selector-class-pattern": null,
