--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "yarn run generate-icons && vue-cli-service serve",
     "build": "yarn run generate-icons && vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
+    "lint:style": "stylelint 'src/**/*.{css,scss,vue}' --syntax:scss",
     "lint:style:fix": "stylelint 'src/**/*.{css,scss,vue}' -- --fix",
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
@@ -14,11 +14,16 @@
     "@vue/eslint-config-airbnb": "^5.3.0",
     "abcjs": "^5.12.0",
     "core-js": "^3.6.4",
+    "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
     "stylelint": "^14.6.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
+    "stylelint-webpack-plugin": "^3.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-svgicon": "^3.2.6",
