--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "yarn run generate-icons && vue-cli-service serve",
     "build": "yarn run generate-icons && vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lint:style": "stylelint 'src/**/*.{css,scss,vue}' --syntax:scss",
-    "lint:style:fix": "stylelint 'src/**/*.{css,scss,vue}' -- --fix",
+    "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
+    "lint:style:fix": "yarn run lint:style -- --fix",
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
   "dependencies": {
