--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "serve": "yarn run generate-icons && vue-cli-service serve",
     "build": "yarn run generate-icons && vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "lint:all": "yarn run lint && yarn run lint:style",
+    "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
     "lint:style:fix": "yarn run lint:style -- --fix",
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
@@ -57,7 +59,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
+      "yarn run lint:all:fix",
       "git add"
     ]
   }
