--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:all": "yarn run lint && yarn run lint:style",
     "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
-    "lint:style:fix": "yarn run lint:style -- --fix",
+    "lint:style:fix": "yarn run lint:style --fix",
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
   "dependencies": {
