--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  base = "/"
+  publish = "dist"
+  command = "yarn run lint:all && yarn build"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
