--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   publish = "dist"
-  command = "yarn run lint:all && yarn build"
+  command = "yarn build"
 
 [[redirects]]
   from = "/*"
