--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-standard-scss",
+    "stylelint-config-sass-guidelines",
     "stylelint-config-recommended-vue"
   ],
   "plugins": ["stylelint-scss", "stylelint-order"],
@@ -15,6 +15,7 @@
     "scss/at-rule-no-unknown": true,
     "selector-id-pattern": null,
     "selector-class-pattern": null,
+    "max-nesting-depth": 2,
     "unit-allowed-list": [
       "ch",
       "em",
