--- a/package.json
+++ b/package.json
@@ -13,31 +13,35 @@
     "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
   },
   "dependencies": {
-    "abcjs": "^5.12.0",
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
+    "abcjs": "^6.0.2",
+    "core-js": "^3.21.1",
+    "postcss-focus": "^5.0.1",
+    "typescript": "^4.6.3",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14",
     "vue-svgicon": "^3.2.6",
-    "vuex": "^3.1.2"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-plugin-vuex": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "@vue/eslint-config-airbnb": "^5.3.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-plugin-router": "~5.0.4",
+    "@vue/cli-plugin-vuex": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^7.31.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^7.14.0",
-    "lint-staged": "^11.1.1",
+    "eslint": "^8.12.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vuejs-accessibility": "^1.1.1",
+    "lint-staged": "^12.3.7",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
-    "prettier": "^2.0.5",
-    "sass": "^1.25.0",
-    "sass-loader": "^10.1.0",
+    "prettier": "^2.6.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "stylelint": "^14.6.1",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
