--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "dev": "vite",
+    "serve": "vite preview",
+    "build": "vite build",
+    "lint": "vite lint",
     "lint:all": "yarn run lint && yarn run lint:style",
     "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
@@ -13,33 +14,27 @@
   },
   "dependencies": {
     "abcjs": "^6.0.2",
-    "core-js": "^3.21.1",
     "postcss-focus": "^5.0.1",
     "typescript": "^4.6.3",
+    "vite-svg-loader": "^3.1.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.16.0",
-    "@vue/cli-plugin-babel": "~5.0.4",
-    "@vue/cli-plugin-eslint": "~5.0.4",
-    "@vue/cli-plugin-router": "~5.0.4",
-    "@vue/cli-plugin-vuex": "~5.0.4",
+    "@vitejs/plugin-vue": "^2.2.4",
     "@vue/cli-service": "~5.0.4",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^8.12.0",
+    "eslint": "8",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vue": "8",
     "eslint-plugin-vuejs-accessibility": "^1.1.1",
-    "lint-staged": "^12.3.7",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.3",
     "prettier": "^2.6.1",
     "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
     "stylelint": "^14.6.1",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-sass-guidelines": "^9.0.1",
@@ -48,23 +43,13 @@
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
     "stylelint-webpack-plugin": "^3.2.0",
-    "vue-loader-v16": "^16.0.0-beta.5.4",
-    "vue-svg-loader": "^0.17.0-beta.2",
-    "vue-template-compiler": "^2.6.11"
+    "vite": "^2.8.6",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "resolutions": {
     "postcss": "^8.3.11"
   },
   "engines": {
     "node": "16.14.0"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,vue}": [
-      "yarn run lint:all:fix",
-      "git add"
-    ]
   }
 }
