--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "serve": "vite preview",
     "build": "vite build",
-    "lint": "vite lint",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "lint:all": "yarn run lint && yarn run lint:style",
     "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
