--- a/package.json
+++ b/package.json
@@ -3,47 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "yarn run generate-icons && vue-cli-service serve",
-    "build": "yarn run generate-icons && vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "generate-icons": "vsvg -s ./icons -t ./src/compiled-icons --svgo svgo.js --tpl ./icons/icon.tpl.txt --es6"
+    "dev": "vite",
+    "serve": "vite preview",
+    "build": "vite build",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "lint:all": "yarn run lint && yarn run lint:style",
+    "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
+    "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
+    "lint:style:fix": "yarn run lint:style --fix"
   },
   "dependencies": {
-    "@vue/eslint-config-airbnb": "^5.3.0",
-    "abcjs": "^5.12.0",
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
-    "vue-svgicon": "^3.2.6",
-    "vuex": "^3.1.2"
+    "abcjs": "^6.0.2",
+    "postcss-focus": "^5.0.1",
+    "typescript": "^4.6.3",
+    "vite-svg-loader": "^3.1.2",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-plugin-vuex": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^7.31.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^7.14.0",
-    "lint-staged": "^11.1.1",
-    "prettier": "^2.0.5",
-    "sass": "^1.25.0",
-    "sass-loader": "^10.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "@typescript-eslint/parser": "^5.16.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vue/cli-service": "~5.0.4",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "8",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "8",
+    "eslint-plugin-vuejs-accessibility": "^1.1.1",
+    "postcss-html": "^1.3.0",
+    "postcss-scss": "^4.0.3",
+    "prettier": "^2.6.1",
+    "sass": "^1.49.9",
+    "stylelint": "^14.6.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
+    "stylelint-webpack-plugin": "^3.2.0",
+    "vite": "^2.8.6",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
+  },
+  "resolutions": {
+    "postcss": "^8.3.11"
   },
   "engines": {
     "node": "16.14.0"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
   }
 }
