Set yarn version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "transpose",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "yarn@3.5.0",
   "scripts": {
     "dev": "vite",
     "serve": "vite preview",
