--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "transpose",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@3.5.0",
   "scripts": {
     "dev": "vite",
     "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "lint:all": "yarn run lint && yarn run lint:style",
-    "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
+    "lint:all": "npm run lint && yarn run lint:style",
+    "lint:all:fix": "npm run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
-    "lint:style:fix": "yarn run lint:style --fix"
+    "lint:style:fix": "npm run lint:style --fix"
   },
   "dependencies": {
     "vue": "^3.2.47",
@@ -25,6 +24,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "abcjs": "^6.2.0",
     "eslint": "8",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "9",
     "eslint-plugin-vuejs-accessibility": "^2.1.0",
