--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:all": "npm run lint && yarn run lint:style",
     "lint:all:fix": "npm run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
-    "lint:style:fix": "npm run lint:style --fix"
+    "lint:style:fix": "npm run lint:style -- --fix"
   },
   "dependencies": {
     "vue": "^3.2.47",
