--- a/package.json
+++ b/package.json
@@ -7,43 +7,44 @@
     "serve": "vite preview",
     "build": "vite build",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "lint:all": "yarn run lint && yarn run lint:style",
-    "lint:all:fix": "yarn run lint && yarn run lint:style:fix",
+    "lint:all": "npm run lint && yarn run lint:style",
+    "lint:all:fix": "npm run lint && yarn run lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
-    "lint:style:fix": "yarn run lint:style --fix"
+    "lint:style:fix": "npm run lint:style -- --fix"
   },
   "dependencies": {
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.16.0",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vue/cli-service": "~5.0.4",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "abcjs": "^6.0.2",
+    "@typescript-eslint/parser": "^5.57.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "abcjs": "^6.2.0",
     "eslint": "8",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "8",
-    "eslint-plugin-vuejs-accessibility": "^1.1.1",
-    "postcss-html": "^1.3.0",
-    "postcss-scss": "^4.0.3",
-    "prettier": "^2.6.1",
-    "sass": "^1.49.9",
-    "stylelint": "^14.6.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "9",
+    "eslint-plugin-vuejs-accessibility": "^2.1.0",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.6",
+    "prettier": "^2.8.7",
+    "sass": "^1.60.0",
+    "stylelint": "^15.4.0",
     "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-sass-guidelines": "^9.0.1",
-    "stylelint-config-standard": "^25.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.8.6",
-    "vite-svg-loader": "^3.1.2",
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^4.6.0",
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1",
+    "vite-svg-loader": "^4.0.0",
     "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "engines": {
-    "node": "16.14.0"
+    "node": "18.15.0"
   }
 }
