--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,21 +1,30 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-sass-guidelines",
     "stylelint-config-recommended-vue"
   ],
-  "plugins": ["stylelint-scss", "stylelint-order"],
+  "plugins": [
+    "stylelint-order"
+  ],
   "rules": {
-    "at-rule-no-unknown": null,
-    "function-no-unknown": null,
-    "no-invalid-position-at-import-rule": null,
-    "order/order": ["custom-properties", "declarations", "rules"],
-    "order/properties-alphabetical-order": [true],
-    "property-no-vendor-prefix": [true, { "ignoreProperties": ["appearance"] }],
-    "scss/at-rule-no-unknown": true,
+    "order/order": [
+      "custom-properties",
+      "declarations",
+      "rules"
+    ],
+    "order/properties-alphabetical-order": [
+      true
+    ],
+    "property-no-vendor-prefix": [
+      true,
+      {
+        "ignoreProperties": [
+          "appearance"
+        ]
+      }
+    ],
     "selector-id-pattern": null,
     "selector-class-pattern": null,
-    "max-nesting-depth": 2,
     "unit-allowed-list": [
       "ch",
       "em",
