--- a/package.json
+++ b/package.json
@@ -13,38 +13,30 @@
     "lint:style:fix": "npm run lint:style -- --fix"
   },
   "dependencies": {
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "autoprefixer": "^10.4.16",
+    "vue": "^3.4.3",
+    "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/cli-service": "~5.0.8",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "abcjs": "^6.2.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "abcjs": "^6.2.3",
     "eslint": "8",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "9",
-    "eslint-plugin-vuejs-accessibility": "^2.1.0",
+    "eslint-plugin-vuejs-accessibility": "^2.2.0",
     "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.6",
-    "prettier": "^2.8.7",
-    "sass": "^1.60.0",
-    "stylelint": "^15.4.0",
-    "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-sass-guidelines": "^10.0.0",
-    "stylelint-config-standard": "^32.0.0",
-    "stylelint-config-standard-scss": "^7.0.1",
-    "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^4.6.0",
-    "typescript": "^5.0.3",
-    "vite": "^4.2.1",
-    "vite-svg-loader": "^4.0.0",
+    "prettier": "^3.1.1",
+    "stylelint": "^16.1.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-svg-loader": "^5.1.0",
     "vue-loader-v16": "^16.0.0-beta.5.4"
-  },
-  "engines": {
-    "node": "18.15.0"
   }
 }
