--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "stylelint-order": "^6.0.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vite-svg-loader": "^5.1.0",
-    "vue-loader-v16": "^16.0.0-beta.5.4"
+    "vite-svg-loader": "^5.1.0"
   }
 }
