--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     },
     "extends": [
       "eslint:recommended",
-      "plugin:vue/vue3-recommended",
+      "plugin:vue/vue3-strongly-recommended",
       "prettier"
     ],
     "parser": "vue-eslint-parser",
