--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,8 @@
   "useTabs": false,
   "printWidth": 80,
   "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
+  "singleAttributePerLine": true,
   "trailingComma": "all"
 }
