--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "stylelint-order": "^6.0.4",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
+    "vite-tsconfig-paths": "^4.2.3",
     "vite-svg-loader": "^5.1.0"
   }
 }
