--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dev": "vite",
     "serve": "vite preview",
     "build": "vite build",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
-    "lint:all": "npm run lint && yarn run lint:style",
-    "lint:all:fix": "npm run lint && yarn run lint:style:fix",
-    "lint:style": "stylelint 'src/**/*.{css,scss,vue}'",
-    "lint:style:fix": "npm run lint:style -- --fix"
+    "lint": "npm run lint:eslint && yarn run lint:style",
+    "lint:fix": "npm run lint:eslint && yarn run lint:style:fix",
+    "lint:eslint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
+    "lint:style": "stylelint 'src/**/*.{css,vue}'",
+    "lint:style:fix": "npm run lint:style --fix"
   },
   "dependencies": {
     "vue": "^3.4.3",
