--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "extends": [
       "eslint:recommended",
       "plugin:vue/vue3-strongly-recommended",
-      "prettier"
+      "plugin:prettier/recommended"
     ],
     "parser": "vue-eslint-parser",
     "parserOptions": {
