--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   publish = ".next"
-  command = "npm run next build"
+  command = "npm run build"
 
 [[redirects]]
   from = "/*"
