--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "stylelint": "^16.12.0",
     "stylelint-config-standard": "^36.0.1",
