--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,12 @@
 {
   "extends": "stylelint-config-standard",
   "plugins": [
-    "stylelint-order"
+    "stylelint-order",
+    "stylelint-use-logical"
   ],
   "rules": {
     "alpha-value-notation": "number",
+    "csstools/use-logical": "always",
     "custom-property-pattern": null,
     "import-notation": "string",
     "no-descending-specificity": null,
@@ -15,6 +17,18 @@
       "rules"
     ],
     "order/properties-alphabetical-order": true,
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "unit-allowed-list": [
+      "ch",
+      "em",
+      "rem",
+      "vh",
+      "vw",
+      "vmin",
+      "deg",
+      "%",
+      "s",
+      "fr"
+    ]
   }
 }
