--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run lint && npm test && npm run build"
+  command = "npm test && npm run build"
   publish = ".next"
 
 [[plugins]]
