--- a/package.json
+++ b/package.json
@@ -6,33 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "npm run lint:js && yarn run lint:style",
-    "lint:fix": "npm run lint:js:fix && yarn lint:style",
-    "lint:js": "eslint .",
-    "lint:js:fix": "eslint --fix .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "npm run lint:js && npm run lint:style",
+    "lint:fix": "npm run lint:js:fix && npm run lint:style",
+    "lint:js": "eslint --cache --max-warnings 0 src",
+    "lint:js:fix": "eslint --fix --cache src",
     "lint:style": "stylelint 'src/**/*.css' --fix"
   },
   "dependencies": {
-    "abcjs": "^6.5.2",
+    "abcjs": "^6.6.1",
     "classnames": "^2.5.1",
-    "next": "16.0.7",
+    "next": "16.1.6",
     "react": "^19",
     "react-dom": "^19"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^24",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "stylelint": "^16.26.1",
-    "stylelint-config-standard": "^39.0.1",
-    "stylelint-order": "^7.0.0",
-    "stylelint-use-logical": "^2.1.2",
+    "jest": "^30.2.0",
+    "stylelint": "^17.1.1",
+    "stylelint-config-standard": "^40.0.0",
+    "stylelint-order": "^7.0.1",
+    "stylelint-use-logical": "^2.1.3",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
