--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,9 @@
 {
   "extends": "stylelint-config-standard",
+  "plugins": ["stylelint-order"],
   "rules": {
     "selector-class-pattern": null,
-    "alpha-value-notation": null
+    "alpha-value-notation": null,
+    "order/properties-alphabetical-order": true
   }
 }
