Unit and E2E Tests (#80)
* Add E2E tests

* Fix tests

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run lint && npm test && npm run build"
+  command = "npm run lint && npm run test:unit && npm run build"
   publish = ".next"
 
 [[plugins]]
