--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^30.2.0",
+    "prettier": "^3.8.1",
     "stylelint": "^17.1.1",
     "stylelint-config-standard": "^40.0.0",
     "stylelint-order": "^7.0.1",
-    "stylelint-use-logical": "^2.1.3",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5"
